bot token exposed vulnerability removed